Fixed hiding nav when click on mobile responsive

--- a/css/index.css
+++ b/css/index.css
@@ -34,6 +34,10 @@ html, body {
     margin-right: 5px;
 }
 
+.searchSubmit {
+    padding: 10px;
+}
+
 .loginBtn, .signupBtn {
     margin-right: 3px;
     margin-left: 3px;
